--- a/index.html
+++ b/index.html
@@ -74,6 +74,12 @@
       <label id="bcLabel">BC cost: </label>
       <label id="bc" class="val" data-key="bc">0</label>
     </div>
+    <div class="credits">
+      <b>Credits/Sources</b><br>
+      <a href="http://irisayame.web.fc2.com/mhf/mhf_sinka.html">Pre-Z point table</a> (irisayame)
+      <br>
+      <a href="https://mh.fist.moe/database/#DBsection20">Layout + Z point table</a> (SirFist)
+    </div>
   </div>
   <script src="scripts/calc.js" onload="calculatePoints()"></script>
 
